traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:3: error: value update is not a member of Boolean
  fonctionTest()=false
  ^